bpo-37502: handle default parameter for buffers argument of pickle.loads correctly (GH-14593)